styles.css
body {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: hsl(0, 0%, 95%);

}
#calculator {
  font-family: Arial, Helvetica, sans-serif;
  background-color: hsl(0, 0%, 15%);
  border-radius: 15px;
  max-width: 420px;
  overflow: hidden;
}

#display {
  width: 100%;
  padding: 20px;
  font-size: 4rem;
  text-align: left;
  border: none;
  background-color: hsl(0, 0%, 20%);
  color:#fff;
}

#keys {
  display: grid;
  grid-template-columns: repeat(4,1fr);
  gap: 10px;
  padding: 25px;
}
button {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: none;
  background-color: hsl(0, 0%, 30%);
  color: #fff;
  font-size: 2rem;
  font-weight: bold;
  cursor: pointer;
}
button:hover {
  background-color: hsl(0, 0%, 40%);;
}
button:active {
  background-color: hsl(0, 0%, 50%);;
}

.operator-btn {
  background-color: hsl(35, 100%, 55%);
}
.operator-btn:hover {
  background-color: hsl(35, 100%, 65%);
}
.operator-btn:active {
  background-color: hsl(35, 100%, 75%);
}

